[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/UI/title.png" type="Texture" id=1]
[ext_resource path="res://assets/Fonts/Kenney Pixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/UI/TitleScreen/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Levels/Level1.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/SettingsScreen/SettingsScreen.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
level_scene = ExtResource( 4 )
settings_scene = ExtResource( 5 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = 9.46622
margin_right = 42.0
margin_bottom = 53.4662
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 84.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
text = "START"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 84.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"

[connection signal="button_down" from="VBoxContainer/StartButton" to="." method="_on_StartButton_button_down"]
[connection signal="button_up" from="VBoxContainer/StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_down" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_button_down"]
[connection signal="button_up" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_button_up"]
